test/expected/explain_rv.out
explain void &x
             ^
14: error: reference to "void" is illegal; did you mean pointer to void?
